[package]
name = "wasm-pixels"
version = "0.1.0"
authors = ["Telefragged <Vetle.braend@gmail.com>"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = "z"
lto = true